// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component that renders a website header with a logo on the left and optional children on the right side should render correctly with logo passed as component 1`] = `
<Header
  logo={
    <a
      href="/test"
    >
      <IconTextkernel
        context={null}
        margin={null}
        size={null}
        title={null}
      />
    </a>
  }
>
  <header
    className="Header"
  >
    <div
      className="Header__wrapper"
    >
      <a
        className="Header__logo"
        href="/test"
      >
        <IconTextkernel
          context={null}
          margin={null}
          size={null}
          title={null}
        >
          <IconBase
            context={null}
            margin={null}
            size={null}
            title={null}
            viewBox="0 0 369.7 800"
          >
            <div
              className="IconBase"
              margin={null}
            >
              <svg
                aria-labelledby={null}
                className="IconBase__svg"
                role="img"
                style={null}
                viewBox="0 0 369.7 800"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M334.3,800C203.4,766.9,89.9,681.8,89.9,543.8V248.3H0v-104H89.9V0H223.1V144.2H349.2v104H223.1V554c0,76.5,56.7,109.6,146.6,130.8Z"
                />
              </svg>
            </div>
          </IconBase>
        </IconTextkernel>
      </a>
      <div
        className="Header__menu"
      >
        This is a placeholder for children
      </div>
    </div>
  </header>
</Header>
`;

exports[`Header component that renders a website header with a logo on the left and optional children on the right side should render correctly with simple logo image 1`] = `
<Header
  logo={
    Object {
      "src": "jobfeed-logo.svg",
    }
  }
>
  <header
    className="Header"
  >
    <div
      className="Header__wrapper"
    >
      <img
        alt="our logo"
        className="Header__logo"
        src="jobfeed-logo.svg"
      />
      <div
        className="Header__menu"
      >
        This is a placeholder for children
      </div>
    </div>
  </header>
</Header>
`;

exports[`Header component that renders a website header with a logo on the left and optional children on the right side should render correctly with simple logo image as a link 1`] = `
<Header
  logo={
    Object {
      "link": "/",
      "src": "jobfeed-logo.svg",
    }
  }
>
  <header
    className="Header"
  >
    <div
      className="Header__wrapper"
    >
      <a
        href="/"
      >
        <img
          className="Header__logo"
          src="jobfeed-logo.svg"
        />
      </a>
      <div
        className="Header__menu"
      >
        This is a placeholder for children
      </div>
    </div>
  </header>
</Header>
`;
